Fix wrapping 'Ye Olde Magic Shoppe'

--- a/Arkham Horror/Arkham.css
+++ b/Arkham Horror/Arkham.css
@@ -1,7 +1,3 @@
-/*
-background-back: http://i.imgur.com/eoC27U8.jpg
-*/
-
 [name=attr_two-abilities] + div,
 [name=attr_three-abilities] + div {
     display: none;
@@ -331,6 +327,10 @@ h1 .sheet-inline-input {
 .sheet-focus {
     left: 30px;
     width: 300px;
+}
+
+.sheet-home span {
+    margin-left: -10px;
 }
 
 .sheet-abilities {
